# rust-question-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  log4rs.yaml  question.json  rust.rs  setup.local.example.toml
handle-errors/: Cargo.toml
handle-errors/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
migrations/: 20230401214725_create_initial_tables.down.sql  20230401214725_create_initial_tables.up.sql  20230403210143_extend_answers_table.down.sql  20230403210143_extend_answers_table.up.sql
mock-server/src/: lib.rs
src/: config.rs  lib.rs  main.rs  store.rs
src/routes/: answer.rs  authentication.rs  mod.rs  question.rs
src/services/: mod.rs  profanity.rs
src/types/: account.rs  answer.rs  mod.rs  pagination.rs  question.rs
