[package]
name = "question-webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
# We can omit the version number for local imports
handle-errors = { path = "handle-errors" }
uuid = { version = "0.8", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Formatted for print purposes; this has to be on one line
# or it won't compile
sqlx = {version = "0.5", features = [ "runtime-tokio-rustls", "migrate", "postgres" ]}
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
reqwest-middleware = "0.1.1"
reqwest-retry = "0.1.1"
rand = "0.8"
rust-argon2 = "1.0"
paseto = "2.0"
chrono = "0.4.19"
clap = { version = "3.1.7", features = ["derive"] }
proc-macro2 = "1.0.37"
dotenv = "0.15.0"

[build-dependencies]
platforms = "2.0.0"
